<resources>
    <string name="app_name">Minha música favorita</string>
    <string name="descricao_foto_emicida">Foto do emicida de costas no palco do teatro municipal de SP. Plateia ao fundo</string>
    <string name="texto_titulo_musica">É Tudo Pra Ontem</string>
    <string name="texto_letra_musica">Talvez seja bom partir do final \n\Afinal, é um ano todo só de sexta-feira treze \n\'Cê também podia me ligar de vez em quando \nEu ando igual lagarta, triste, sem poder sair \n\ \n\Aqui o mantra que nos traz o centro \nEnquanto lavo um banheiro, uma louça, querendo lavar a alma \nNa calma da semente que germina \nQue eu preciso olhar minhas menina \n\ \n\A folha amarela, igual comida, envelhece \nÉ a vida, acontece com pessoa e documento \nÉ tão triste ter que vir, coisa ruim pra nos unir \nE nem assim agora, mano, vamo\' embora a tempo \n\ \n\Viver é partir, voltar e repartir (é isso) \nPartir, voltar e repartir (é tudo pra ontem) \nViver é partir, voltar e repartir \nPartir, voltar e repartir \n\ \n\ Vi árvores a derramar suas flores pra ninguém \n\'To zen no meu momento, Coltrane anti-jazz \nCrianças têm o céu no alcance das mãos \nIrmão, será que há tempo de poder ser mais? \n\ \n\ Eu sei, caramba, nem estrelas são iguais \nTem mais, vitória agora é uma fresta de sol \nNo fim das conta, Tetsuo é quem tinha razão \nEntão todas areias da ampulheta, vão \n\ \n\ E as fotos amarelam, como os dentes \nAs plantas, a gente, a chama, a febre intermitente \nVazia estrada, cheia a caixa de entrada \nE, de repente, uma luz quadrada quente, diz que \n\ \n\Viver é partir, voltar e repartir \nPartir, voltar e repartir \nViver é partir, voltar e repartir \nPartir, voltar e repartir \n\ \n\. . .</string>
    <string name="texto_botao_detalhes">Ver Detalhes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao_retrato_emicida">Foto do Emicida de olhos fechados, braços cruzados apoiados em uma cadeira de madeira. Fundo azul escuro</string>
    <string name="texto_emicida">Emicida</string>
    <string name="texto_descricao">Leandro Roque de Oliveira, mais conhecido pelo nome artístico Emicida, é um rapper, cantor, letrista e compositor brasileiro. É considerado uma das maiores revelações do hip hop do Brasil da década de 2000. O nome \'Emicida\' é uma fusão das palavras \'MC\' e \'homicida\'.</string>
    <string name="texto_lista_albuns">Lista de álbuns</string>
    <string name="detalhes_banda">Detalhes da Banda</string>
    <string name="detalhes_album">Detalhes do Álbum</string>
    <string name="texto_nome_album">Nome do Álbum</string>
    <string name="texto_descricaoAlbum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="msg_toast">Álbum favoritado com sucesso!</string>
</resources>