<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura_250"
            android:scaleType="centerCrop"
            android:src="@drawable/foto_emicida"
            android:contentDescription="@string/descricao_foto_emicida"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_titulo_musica"
            android:textSize="@dimen/tamanho_fonte_16"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margem_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(part. Gilberto Gil)"
            android:textSize="@dimen/tamanho_fonte_10"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margem_50"
            android:layout_marginBottom="@dimen/margem_50"
            android:layout_marginTop="@dimen/margem_20"
            android:textAlignment="center"
            android:text="@string/texto_letra_musica"/>

    </LinearLayout>


</ScrollView>