<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.InformacoesFragment">

    <ImageView
        android:id="@+id/iv_retrato_emicida"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_250"
        android:src="@drawable/foto_retrato_emicida"
        android:scaleType="centerCrop"
        android:contentDescription="@string/descricao_retrato_emicida"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
        android:id="@+id/tv_titulo_emicida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_emicida"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/tamanho_fonte_16"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/iv_retrato_emicida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/texto_descricao"
        android:textColor="@color/black"
        android:textSize="@dimen/tamanho_fonte_12"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_emicida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>